[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/Neutron.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Control.gd" type="Script" id=2]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://scripts/Area.gd" type="Script" id=4]
[ext_resource path="res://scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://textures/photos_2015_09_18_fst_765b3qqmm4v.jpg" type="Texture" id=6]
[ext_resource path="res://scenes/nb_neutrons_label.gd" type="Script" id=7]
[ext_resource path="res://scenes/shutdown_button.gd" type="Script" id=8]
[ext_resource path="res://scenes/source_button.gd" type="Script" id=9]
[ext_resource path="res://scenes/reflexions_button.gd" type="Script" id=10]
[ext_resource path="res://scenes/pause_button.gd" type="Script" id=11]
[ext_resource path="res://scenes/x_HSlider.gd" type="Script" id=12]
[ext_resource path="res://scenes/b2g_label.gd" type="Script" id=13]
[ext_resource path="res://scenes/y_HSlider.gd" type="Script" id=14]
[ext_resource path="res://scenes/z_HSlider.gd" type="Script" id=15]
[ext_resource path="res://scenes/speed_HSlider.gd" type="Script" id=16]
[ext_resource path="res://scenes/b2m_label.gd" type="Script" id=17]

[sub_resource type="CubeMesh" id=3]
size = Vector3( 200, 2, 200 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 6 )
metallic_specular = 0.0

[sub_resource type="CubeMesh" id=1]
size = Vector3( 4, 4, 4 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.447059, 0.666667, 0.419608, 0.388235 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2, 2, 2 )

[node name="Main" type="Spatial"]
script = ExtResource( 5 )
neutron_scene = ExtResource( 1 )

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0344315, 7.0313, 3.91534 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.674109, -0.604911, 0.423862, -0.714478, -0.388466, 0.581907, -0.187346, -0.695109, -0.694064, 2.45544, 1.15107, -3.09544 )

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -40, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Neutron" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00641632, 0.0244982, -0.011745 )
neutron_scene = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.0344315, 8.60544, 7.33239 )
far = 300.0
script = ExtResource( 3 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
script = ExtResource( 4 )

[node name="MFR" type="MeshInstance" parent="Area"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Control"]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="minimal_VBoxContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
margin_right = 348.0
margin_bottom = 110.0

[node name="nb_neutrons_label" type="Label" parent="Control/Panel/VBoxContainer/minimal_VBoxContainer"]
margin_right = 348.0
margin_bottom = 14.0
text = "\"Number of neutrons \" + str(get_parent().nb_neutrons))"
script = ExtResource( 7 )

[node name="shutdown_button" type="Button" parent="Control/Panel/VBoxContainer/minimal_VBoxContainer"]
margin_top = 18.0
margin_right = 348.0
margin_bottom = 38.0
text = "Close program"
script = ExtResource( 8 )

[node name="source_button" type="Button" parent="Control/Panel/VBoxContainer/minimal_VBoxContainer"]
margin_top = 42.0
margin_right = 348.0
margin_bottom = 62.0
text = "Generate Sources"
script = ExtResource( 9 )

[node name="reflexions_button" type="Button" parent="Control/Panel/VBoxContainer/minimal_VBoxContainer"]
margin_top = 66.0
margin_right = 348.0
margin_bottom = 86.0
text = "Activate Reflexions"
script = ExtResource( 10 )

[node name="pause_button" type="Button" parent="Control/Panel/VBoxContainer/minimal_VBoxContainer"]
margin_top = 90.0
margin_right = 348.0
margin_bottom = 110.0
text = "Pause"
script = ExtResource( 11 )

[node name="geometry_VBoxContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
margin_top = 114.0
margin_right = 348.0
margin_bottom = 260.0

[node name="x_label" type="Label" parent="Control/Panel/VBoxContainer/geometry_VBoxContainer"]
margin_right = 348.0
margin_bottom = 14.0
text = "MFR x slider :"

[node name="x_HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/geometry_VBoxContainer"]
margin_top = 18.0
margin_right = 348.0
margin_bottom = 34.0
focus_mode = 0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0
script = ExtResource( 12 )

[node name="y_label" type="Label" parent="Control/Panel/VBoxContainer/geometry_VBoxContainer"]
margin_top = 38.0
margin_right = 348.0
margin_bottom = 52.0
text = "MFR y slider :"

[node name="y_HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/geometry_VBoxContainer"]
margin_top = 56.0
margin_right = 348.0
margin_bottom = 72.0
focus_mode = 0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0
script = ExtResource( 14 )

[node name="z_label" type="Label" parent="Control/Panel/VBoxContainer/geometry_VBoxContainer"]
margin_top = 76.0
margin_right = 348.0
margin_bottom = 90.0
text = "MFR z slider :"

[node name="z_HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/geometry_VBoxContainer"]
margin_top = 94.0
margin_right = 348.0
margin_bottom = 110.0
focus_mode = 0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0
script = ExtResource( 15 )

[node name="b2m_label" type="Label" parent="Control/Panel/VBoxContainer/geometry_VBoxContainer"]
margin_top = 114.0
margin_right = 348.0
margin_bottom = 128.0
text = "B2m = "
script = ExtResource( 17 )

[node name="b2g_label" type="Label" parent="Control/Panel/VBoxContainer/geometry_VBoxContainer"]
margin_top = 132.0
margin_right = 348.0
margin_bottom = 146.0
text = "MFR x slider :"
script = ExtResource( 13 )

[node name="GUI_VBoxContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
margin_top = 264.0
margin_right = 348.0
margin_bottom = 298.0

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/GUI_VBoxContainer"]
margin_right = 348.0
margin_bottom = 14.0
text = "Speed value : "

[node name="speed_HSlider" type="HSlider" parent="Control/Panel/VBoxContainer/GUI_VBoxContainer"]
margin_top = 18.0
margin_right = 348.0
margin_bottom = 34.0
focus_mode = 0
min_value = 0.5
max_value = 20.0
step = 0.1
value = 5.0
script = ExtResource( 16 )

[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Area" method="_on_Area_body_exited"]
